# HTML2TEI

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  warc2portalname.yaml
configs/abcug/: abcug_BASE.xml  abcug_notext_tags_normal.tsv  abcug_specific.py  abcug_text_tags_normal.tsv
configs/alfahir/: alfahir_BASE.xml  alfahir_BLACKLIST.txt  alfahir_notext_tags_normal.tsv  alfahir_specific.py  alfahir_text_tags_normal.tsv  spec_blacklist_alfahir.txt
configs/blikk/: article_dictionary.py  blikk_BASE.xml  blikk_empty_BLACKLIST.txt  blikk_notebook.ipynb  blikk_notext_tags_normal.tsv  blikk_specific.py  blikk_text_tags_normal.tsv
configs/budapestbeacon/: budapestbeacon_BASE.xml  budapestbeacon_BLACKLIST.txt  budapestbeacon_notext_tags_normal.tsv  budapestbeacon_specific.py  budapestbeacon_text_tags_normal.tsv
configs/epiteszforum/: epiteszforum_BASE.xml  epiteszforum_notext_tags_normal.tsv  epiteszforum_specific.py  epiteszforum_text_tags_normal.tsv
configs/example/: dummy_text_and_notext_tags_normal.tsv  example_BASE.xml  example_specific.py  example_specific_auto.py
configs/hiradohu/: hiradohu_BASE.xml  (+3 more)
html2tei/: __init__.py  __main__.py  article_body_converter.py  basic_schema_removal.py  basic_tag_dicts.py  digest.py  excluded_tags_collection.py  json_utils.py  link_corrector.py  portal_article_cleaner.py  processing_utils.py  read_config.py  tag_bigrams_maker.py  tag_inventory_maker.py  tei_utils.py  unicode_error.py  update_and_filter_tables.py  validate_hash_zip.py  version.py
tests/: README.md  test_entrypoint.py
(+197 files in other folders)
